--- a/src/Common.css
+++ b/src/Common.css
@@ -12,7 +12,7 @@ body {
   font-family: "Mulish", sans-serif;
   list-style: 1.7;
 }
-.yoga-svg {
+.photo {
   animation: moveUpDown 0.7s infinite alternate;
 }
 .navbar-logo {
